--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -124,56 +124,63 @@
 .section-price {
     border-bottom: 1px solid $color-grey-light-3;
 }
+
 .section-premium {
     background-color: $color-white;
 
-    .premium-features {
-        position: relative;
-        margin-bottom: 3rem;
+    .premium {
 
-        @include respond(tab-port) {
-            margin-left: 10rem;
+        &-img {
+            width: 100%;
         }
-
-        &__icon {
-            position: absolute;
-            top: -.5rem;
-            left: -7rem;
-            font-size: 5rem;
-            color: $color-brown;
-        }
-
-        &__heading {
-            color: $color-black-light;
-            font-size: 2rem;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        &__description {
-            color: $color-grey-light;
-            font-size: 1.4rem;
-            font-weight: 500;
-            margin-bottom: 1rem;
-        }
-
-        &__feature {
-            color: $color-grey-light;
-            font-size: 1.4rem;
-            font-weight: 600;
-            line-height: 3rem;
-            text-transform: uppercase;
-            margin-left: 1.5rem;
+        &-features {
             position: relative;
+            margin-bottom: 3rem;
 
-            &::before {
-                content: "";
-                width: 1rem;
-                height: 2px;
-                background-color: $color-grey-light;
+            @include respond(tab-port) {
+                margin-left: 10rem;
+            }
+
+            &__icon {
                 position: absolute;
-                top: 50%;
-                left: -1.5rem;
+                top: -.5rem;
+                left: -7rem;
+                font-size: 5rem;
+                color: $color-brown;
+            }
+
+            &__heading {
+                color: $color-black-light;
+                font-size: 2rem;
+                font-weight: 700;
+                text-transform: uppercase;
+            }
+
+            &__description {
+                color: $color-grey-light;
+                font-size: 1.4rem;
+                font-weight: 500;
+                margin-bottom: 1rem;
+            }
+
+            &__feature {
+                color: $color-grey-light;
+                font-size: 1.4rem;
+                font-weight: 600;
+                line-height: 3rem;
+                text-transform: uppercase;
+                margin-left: 1.5rem;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    width: 1rem;
+                    height: 2px;
+                    background-color: $color-grey-light;
+                    position: absolute;
+                    top: 50%;
+                    left: -1.5rem;
+                }
             }
         }
     }
